Corrected for production

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,9 +6,9 @@ upstream ranknstein {
 server {
   listen 80;
   server_name  ranknstein.com;
-  access_log /home/bsiggelkow/public_html/ranknstein/log/thin.log;
-  root /home/bsiggelkow/public_html/ranknstein/;
-  error_log /home/bsiggelkow/public_html/ranknstein/log/error.log;
+  access_log /home/bsiggelkow/public_html/ranknstein.com/log/thin.log;
+  root /home/bsiggelkow/public_html/ranknstein.com/;
+  error_log /home/bsiggelkow/public_html/ranknstein.com/log/error.log;
  
   location / {
     proxy_pass http://ranknstein;
