--- a/production_thin.yml
+++ b/production_thin.yml
@@ -1,11 +1,11 @@
 ---
 environment: production 
-chdir: /home/bsiggelkow/public_html/ranknstein/
+chdir: /home/bsiggelkow/public_html/ranknstein.com/
 address: 127.0.0.1
 port: 7654 
-pid: /home/bsiggelkow/public_html/ranknstein/tmp/pids/thin.pid 
-rackup: /home/bsiggelkow/public_html/ranknstein/config.ru 
-log: /home/bsiggelkow/public_html/ranknstein/tmp/log/thin.log 
+pid: /home/bsiggelkow/public_html/ranknstein.com/tmp/pids/thin.pid 
+rackup: /home/bsiggelkow/public_html/ranknstein.com/config.ru 
+log: /home/bsiggelkow/public_html/ranknstein.com/tmp/log/thin.log 
 max_conns: 256 
 timeout: 30 
 max_persistent_conns: 128 
